@@ -97,6 +97,10 @@
     down the mouse button (Time Machine, debugger step/trace/frame advance,
     etc.)
 
+  * Auto-detection of bankswitch scheme by file extension now includes
+    more human-readable formats (not restricted to DOS 3-char length).
+    See the documentation for the new names.
+
   * PNG/ZIP image support is now conditionally compiled into Stella.
     All major ports (Linux/macOS/Windows) have it enabled by default.
 
